@@ -64,9 +64,12 @@ print "Tail, Match:\n", Dumper( $x->("abc") );
 use Benchmark;
 use Pugs::Compiler::Rule;
 my $rpcr = Pugs::Compiler::Rule->compile('[a|b](b)');
+my $rpcr2 = Pugs::Compiler::Rule->compile('[a|b](b)', { ratchet => 1 } );
+#print $rpcr2->perl5;
 print "Benchmark:\n";
 Benchmark::cmpthese(500, {
     PCR_x1       => sub{$rpcr->match('abc') for 1..20},
+    PCR_ratchet_x1  => sub{$rpcr2->match('abc') for 1..20},
     fast_x10     => sub{$x->('abc')         for 1..200},
     P5regex_x100 => sub{ 'abc' =~ /[a|b](b)/o for 1..2000},
 });
